# regex_solver

./: Cargo.toml  README.md
hamlet/: 1.json  2.json  3.json
src/: allowed.rs  main.rs
