[package]
name = "regex_solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
crossbeam-channel = "0.5"
num_cpus = "1.13"
crossterm = "0.23"
anyhow = "1.0"
fancy-regex = "0.10"
regex-syntax = "0.6"
rand = "0.8.5"
once_cell = "1.8"